--- a/index.html
+++ b/index.html
@@ -1,1 +1,35 @@
+<!doctype html>
+<html>
+<head>
+  <meta charset="utf-8"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1"/>
+  <title>Bisan Exchange</title>
+  <style>
+    body{margin:0;background:#0b0f14;color:#e6e6e6;font-family:ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;}
+    .wrap{max-width:820px;margin:0 auto;padding:56px 22px;}
+    h1{letter-spacing:.22em;font-size:18px;font-weight:600;margin:0 0 18px 0;color:#dfe7f2;}
+    .panel{border:1px solid #1f2a37;border-radius:14px;padding:22px;background:rgba(255,255,255,.02);}
+    .sub{opacity:.8;line-height:1.6}
+    .ticker{margin-top:18px;white-space:nowrap;overflow:hidden;border-top:1px solid #1f2a37;padding-top:14px;opacity:.9}
+    .move{display:inline-block;padding-left:100%;animation:scroll 10s linear infinite;}
+    @keyframes scroll{0%{transform:translateX(0)}100%{transform:translateX(-100%)}}
+    .code{color:#9fb3c8}
+  </style>
+</head>
+<body>
+  <div class="wrap">
+    <div class="panel">
+      <h1>BISAN EXCHANGE</h1>
+      <div class="sub">
+        The market is currently experiencing a temporary disconnect.<br/>
+        <span class="code">ERROR: ITE-EXLINK-Δ17</span><br/>
+        Please stand by.
+      </div>
+      <div class="ticker">
+        <div class="move">:: MARKET NODE UNAVAILABLE :: RETRYING… :: MARKET NODE UNAVAILABLE :: RETRYING… ::</div>
+      </div>
+    </div>
+  </div>
+</body>
+</html>
 
