--- a/index.html
+++ b/index.html
@@ -1,35 +1,353 @@
 <!doctype html>
-<html>
+<html lang="en">
 <head>
-  <meta charset="utf-8"/>
-  <meta name="viewport" content="width=device-width, initial-scale=1"/>
-  <title>Bisan Exchange</title>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>BISAN EXCHANGE</title>
   <style>
-    body{margin:0;background:#0b0f14;color:#e6e6e6;font-family:ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;}
-    .wrap{max-width:820px;margin:0 auto;padding:56px 22px;}
-    h1{letter-spacing:.22em;font-size:18px;font-weight:600;margin:0 0 18px 0;color:#dfe7f2;}
-    .panel{border:1px solid #1f2a37;border-radius:14px;padding:22px;background:rgba(255,255,255,.02);}
-    .sub{opacity:.8;line-height:1.6}
-    .ticker{margin-top:18px;white-space:nowrap;overflow:hidden;border-top:1px solid #1f2a37;padding-top:14px;opacity:.9}
-    .move{display:inline-block;padding-left:100%;animation:scroll 10s linear infinite;}
-    @keyframes scroll{0%{transform:translateX(0)}100%{transform:translateX(-100%)}}
-    .code{color:#9fb3c8}
+    :root{
+      --bg:#07090c;
+      --panel:#0c1118;
+      --ink:#d7dde7;
+      --muted:#96a3b7;
+      --line:#1b2636;
+      --accent:#9fb3d8;
+      --warn:#ff6b6b;
+    }
+    *{box-sizing:border-box}
+    body{
+      margin:0;
+      min-height:100vh;
+      display:grid;
+      place-items:center;
+      background:
+        radial-gradient(900px 500px at 70% 20%, rgba(159,179,216,.10), transparent 60%),
+        radial-gradient(700px 500px at 25% 80%, rgba(255,255,255,.05), transparent 60%),
+        var(--bg);
+      color:var(--ink);
+      overflow:hidden;
+      font-family: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
+    }
+
+    /* subtle scanlines */
+    body:before{
+      content:"";
+      position:fixed; inset:0;
+      background: repeating-linear-gradient(
+        to bottom,
+        rgba(255,255,255,.035),
+        rgba(255,255,255,.035) 1px,
+        rgba(0,0,0,0) 3px,
+        rgba(0,0,0,0) 6px
+      );
+      opacity:.08;
+      pointer-events:none;
+      mix-blend-mode:overlay;
+    }
+
+    /* faint noise */
+    body:after{
+      content:"";
+      position:fixed; inset:-20%;
+      background-image:url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='180' height='180'%3E%3Cfilter id='n'%3E%3CfeTurbulence type='fractalNoise' baseFrequency='.8' numOctaves='3' stitchTiles='stitch'/%3E%3C/filter%3E%3Crect width='180' height='180' filter='url(%23n)' opacity='.25'/%3E%3C/svg%3E");
+      opacity:.05;
+      pointer-events:none;
+      animation: drift 12s linear infinite;
+    }
+    @keyframes drift{from{transform:translate3d(0,0,0)}to{transform:translate3d(-5%,3%,0)}}
+
+    .wrap{
+      width:min(920px, 92vw);
+      padding:22px;
+    }
+
+    .card{
+      background: linear-gradient(180deg, rgba(255,255,255,.04), rgba(255,255,255,0)) , var(--panel);
+      border:1px solid rgba(159,179,216,.18);
+      box-shadow: 0 30px 120px rgba(0,0,0,.55);
+      border-radius:18px;
+      overflow:hidden;
+      position:relative;
+    }
+
+    .topbar{
+      display:flex;
+      align-items:center;
+      justify-content:space-between;
+      padding:14px 16px;
+      border-bottom:1px solid rgba(159,179,216,.14);
+      font-family: ui-sans-serif, system-ui, -apple-system, Segoe UI, Roboto, Helvetica, Arial;
+      letter-spacing:.12em;
+      text-transform:uppercase;
+      font-size:12px;
+      color:rgba(215,221,231,.85);
+    }
+    .topbar .left{
+      display:flex;
+      gap:10px;
+      align-items:center;
+    }
+    .dots{
+      display:flex; gap:6px; opacity:.6
+    }
+    .dot{width:9px;height:9px;border-radius:50%;background:rgba(215,221,231,.32)}
+    .dot:nth-child(1){background:rgba(255,107,107,.45)}
+    .dot:nth-child(2){background:rgba(255,215,100,.35)}
+    .dot:nth-child(3){background:rgba(100,255,170,.25)}
+
+    .sig{
+      color:rgba(150,163,183,.85);
+      font-weight:500;
+    }
+
+    .terminal{
+      padding:18px 18px 16px;
+      display:grid;
+      gap:10px;
+    }
+
+    .meta{
+      display:flex;
+      gap:14px;
+      flex-wrap:wrap;
+      color:var(--muted);
+      font-size:12px;
+      opacity:.95;
+    }
+    .meta b{color:rgba(215,221,231,.95); font-weight:600}
+
+    .screen{
+      background: rgba(0,0,0,.22);
+      border:1px solid rgba(159,179,216,.14);
+      border-radius:14px;
+      padding:14px 14px 12px;
+      position:relative;
+      overflow:hidden;
+    }
+
+    /* faint grid inside screen */
+    .screen:before{
+      content:"";
+      position:absolute; inset:0;
+      background:
+        linear-gradient(rgba(255,255,255,.05) 1px, transparent 1px),
+        linear-gradient(90deg, rgba(255,255,255,.05) 1px, transparent 1px);
+      background-size: 28px 28px;
+      opacity:.06;
+      pointer-events:none;
+    }
+
+    .log{
+      position:relative;
+      display:flex;
+      flex-direction:column;
+      gap:6px;
+      font-size:14px;
+      line-height:1.35;
+      padding-right:8px;
+      max-height:360px;
+      overflow:hidden;
+    }
+
+    .line{
+      white-space:pre-wrap;
+      color:rgba(215,221,231,.92);
+    }
+    .line.muted{color:rgba(150,163,183,.9)}
+    .line.warn{color:rgba(255,107,107,.9)}
+    .line.accent{color:rgba(159,179,216,.95)}
+
+    .statusrow{
+      display:flex;
+      align-items:center;
+      justify-content:space-between;
+      margin-top:10px;
+      gap:10px;
+      color:rgba(150,163,183,.95);
+      font-size:12px;
+    }
+    .bars{
+      display:flex; gap:3px; align-items:flex-end;
+    }
+    .bar{
+      width:4px; border-radius:2px;
+      background:rgba(159,179,216,.25);
+      height:6px;
+      transition:height .25s ease, background .25s ease;
+    }
+
+    .ticker{
+      font-family: ui-sans-serif, system-ui, -apple-system, Segoe UI, Roboto, Helvetica, Arial;
+      letter-spacing:.08em;
+      text-transform:uppercase;
+      font-size:11px;
+      border-top:1px solid rgba(159,179,216,.14);
+      padding:10px 14px;
+      display:flex;
+      gap:12px;
+      color:rgba(215,221,231,.78);
+      background: rgba(0,0,0,.15);
+      position:relative;
+      overflow:hidden;
+    }
+    .ticker span{
+      white-space:nowrap;
+      animation: crawl 10s linear infinite;
+      display:inline-block;
+      padding-left:100%;
+    }
+    @keyframes crawl{
+      from{transform:translateX(0)}
+      to{transform:translateX(-140%)}
+    }
+
+    .glitch{
+      animation: glitch .18s steps(2,end) 1;
+      text-shadow: 1px 0 rgba(159,179,216,.7), -1px 0 rgba(255,107,107,.55);
+    }
+    @keyframes glitch{
+      0%{transform:translate(0,0)}
+      33%{transform:translate(1px,-1px)}
+      66%{transform:translate(-1px,1px)}
+      100%{transform:translate(0,0)}
+    }
+
+    .footer{
+      margin-top:12px;
+      color:rgba(150,163,183,.85);
+      font-size:12px;
+      display:flex;
+      justify-content:space-between;
+      gap:10px;
+      opacity:.95;
+    }
   </style>
 </head>
 <body>
   <div class="wrap">
-    <div class="panel">
-      <h1>BISAN EXCHANGE</h1>
-      <div class="sub">
-        The market is currently experiencing a temporary disconnect.<br/>
-        <span class="code">ERROR: ITE-EXLINK-Δ17</span><br/>
-        Please stand by.
+    <div class="card">
+      <div class="topbar">
+        <div class="left">
+          <div class="dots"><div class="dot"></div><div class="dot"></div><div class="dot"></div></div>
+          <div><strong>BISAN EXCHANGE</strong> / MARKET NODE</div>
+        </div>
+        <div class="sig">ELITE SKYWAY RELAY · ACTIVE</div>
       </div>
+
+      <div class="terminal">
+        <div class="meta">
+          <div><b>NODE</b> MX-LB/DOWNTOWN</div>
+          <div><b>CHANNEL</b> INVENTORY</div>
+          <div><b>SEC</b> COMPLIANCE-LAYER ON</div>
+          <div><b>TIME</b> <span id="clock"></span></div>
+        </div>
+
+        <div class="screen">
+          <div class="log" id="log"></div>
+
+          <div class="statusrow">
+            <div id="status">STATUS: INITIALIZING…</div>
+            <div class="bars" aria-hidden="true">
+              <div class="bar" id="b1"></div>
+              <div class="bar" id="b2"></div>
+              <div class="bar" id="b3"></div>
+              <div class="bar" id="b4"></div>
+              <div class="bar" id="b5"></div>
+            </div>
+          </div>
+        </div>
+      </div>
+
       <div class="ticker">
-        <div class="move">:: MARKET NODE UNAVAILABLE :: RETRYING… :: MARKET NODE UNAVAILABLE :: RETRYING… ::</div>
+        <span id="crawl">TEMPORARY DISCONNECT · ERROR: NX-7C11 · RETRYING HANDSHAKE · MARKET NODE UNRESPONSIVE</span>
       </div>
     </div>
+
+    <div class="footer">
+      <div>© BISAN EXCHANGE · UNLISTED ROUTE</div>
+      <div>IF YOU ARE SEEING THIS PAGE: CONNECTION FAILED.</div>
+    </div>
   </div>
+
+<script>
+  const log = document.getElementById("log");
+  const statusEl = document.getElementById("status");
+  const crawl = document.getElementById("crawl");
+  const bars = [b1,b2,b3,b4,b5];
+
+  const codes = ["NX-7C11","LB-0A9F","SKY-13DE","ITE-44B2","MX-9D07","CRC-2F18","CEN-0D33","NX-5A1C"];
+  const lines = [
+    ["accent", "PING market node…"],
+    ["muted",  "routing via ELITE SKYWAY relay"],
+    ["muted",  "compliance-layer: handshake required"],
+    ["accent", "HANDSHAKE → INIT"],
+    ["warn",   "SYNC FAIL (packet loss)"],
+    ["muted",  "retrying…"],
+    ["accent", "HANDSHAKE → INIT"],
+    ["warn",   "TEMPORARY DISCONNECT"],
+    ["muted",  "error reported to municipal layer (auto)"],
+  ];
+
+  function addLine(kind, text){
+    const d = document.createElement("div");
+    d.className = `line ${kind}`;
+    d.textContent = text;
+    log.appendChild(d);
+    // keep it from growing forever
+    if(log.children.length > 14) log.removeChild(log.firstChild);
+  }
+
+  function now(){
+    const dt = new Date();
+    const pad = n => String(n).padStart(2,"0");
+    return `${pad(dt.getHours())}:${pad(dt.getMinutes())}:${pad(dt.getSeconds())}`;
+  }
+
+  function setClock(){
+    document.getElementById("clock").textContent = now();
+  }
+  setInterval(setClock, 250);
+  setClock();
+
+  // staged boot sequence
+  let i = 0;
+  function boot(){
+    const [k, t] = lines[i % lines.length];
+    addLine(k, `[${now()}] ${t}`);
+    i++;
+
+    // status text
+    const phase = i % 9;
+    if(phase < 3) statusEl.textContent = "STATUS: LINKING…";
+    else if(phase < 6) statusEl.textContent = "STATUS: HANDSHAKE FAIL";
+    else statusEl.textContent = "STATUS: TEMPORARY DISCONNECT";
+
+    // bars “signal”
+    const strength = Math.max(0, 5 - (phase >= 6 ? 4 : (phase >= 3 ? 2 : 1)));
+    bars.forEach((b, idx) => {
+      const on = idx < strength;
+      const h = on ? (8 + idx*4) : (4 + Math.random()*3);
+      b.style.height = `${h}px`;
+      b.style.background = on ? "rgba(159,179,216,.55)" : "rgba(159,179,216,.18)";
+    });
+
+    // rotate error codes + occasional glitch
+    if(phase === 8 || phase === 4){
+      const code = codes[Math.floor(Math.random()*codes.length)];
+      crawl.textContent = `TEMPORARY DISCONNECT · ERROR: ${code} · RETRYING HANDSHAKE · MARKET NODE UNRESPONSIVE`;
+      crawl.classList.add("glitch");
+      setTimeout(()=>crawl.classList.remove("glitch"), 180);
+    }
+  }
+
+  // start
+  addLine("muted", `[${now()}] request received`);
+  addLine("muted", `[${now()}] verifying route token…`);
+  setTimeout(()=>addLine("accent", `[${now()}] token accepted`), 450);
+
+  setInterval(boot, 700);
+</script>
 </body>
 </html>
+
 
