--- a/index.html
+++ b/index.html
@@ -3,349 +3,260 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>BISAN EXCHANGE</title>
+  <title>Bisan Exchange</title>
+
   <style>
     :root{
-      --bg:#07090c;
-      --panel:#0c1118;
-      --ink:#d7dde7;
-      --muted:#96a3b7;
-      --line:#1b2636;
-      --accent:#9fb3d8;
-      --warn:#ff6b6b;
+      --bg: url("assets/bg.jpg");
+      --ink: rgba(214, 255, 255, 0.92);
+      --muted: rgba(214, 255, 255, 0.55);
+      --glass: rgba(6, 18, 28, 0.58);
+      --glass2: rgba(6, 18, 28, 0.78);
+      --border: rgba(120, 220, 255, 0.20);
+      --accent: rgba(120, 220, 255, 0.85);
     }
-    *{box-sizing:border-box}
+
+    *{ box-sizing: border-box; }
+    html,body{ height: 100%; margin: 0; font-family: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono","Courier New", monospace; }
+
+    /* Full-bleed background */
     body{
-      margin:0;
-      min-height:100vh;
-      display:grid;
-      place-items:center;
+      background: var(--bg) center / cover no-repeat fixed;
+      color: var(--ink);
+      overflow: hidden;
+    }
+
+    /* Darken + soften so terminal reads */
+    .veil{
+      position: fixed; inset: 0;
       background:
-        radial-gradient(900px 500px at 70% 20%, rgba(159,179,216,.10), transparent 60%),
-        radial-gradient(700px 500px at 25% 80%, rgba(255,255,255,.05), transparent 60%),
-        var(--bg);
-      color:var(--ink);
-      overflow:hidden;
-      font-family: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
+        radial-gradient(1200px 700px at 70% 20%, rgba(0, 170, 255, 0.14), transparent 60%),
+        radial-gradient(900px 600px at 20% 70%, rgba(0, 255, 190, 0.09), transparent 55%),
+        linear-gradient(180deg, rgba(0,0,0,0.55), rgba(0,0,0,0.75));
+      backdrop-filter: blur(2px) saturate(1.1);
     }
 
-    /* subtle scanlines */
-    body:before{
-      content:"";
-      position:fixed; inset:0;
-      background: repeating-linear-gradient(
-        to bottom,
-        rgba(255,255,255,.035),
-        rgba(255,255,255,.035) 1px,
-        rgba(0,0,0,0) 3px,
-        rgba(0,0,0,0) 6px
-      );
-      opacity:.08;
-      pointer-events:none;
-      mix-blend-mode:overlay;
+    /* Subtle scanlines + noise */
+    .fx{
+      position: fixed; inset: 0;
+      pointer-events: none;
+      background:
+        repeating-linear-gradient(
+          to bottom,
+          rgba(255,255,255,0.03) 0px,
+          rgba(255,255,255,0.03) 1px,
+          rgba(0,0,0,0.0) 3px,
+          rgba(0,0,0,0.0) 6px
+        );
+      mix-blend-mode: overlay;
+      opacity: 0.18;
+      animation: drift 9s linear infinite;
+    }
+    @keyframes drift {
+      0% { transform: translateY(0px); }
+      100% { transform: translateY(18px); }
     }
 
-    /* faint noise */
-    body:after{
-      content:"";
-      position:fixed; inset:-20%;
-      background-image:url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='180' height='180'%3E%3Cfilter id='n'%3E%3CfeTurbulence type='fractalNoise' baseFrequency='.8' numOctaves='3' stitchTiles='stitch'/%3E%3C/filter%3E%3Crect width='180' height='180' filter='url(%23n)' opacity='.25'/%3E%3C/svg%3E");
-      opacity:.05;
-      pointer-events:none;
-      animation: drift 12s linear infinite;
-    }
-    @keyframes drift{from{transform:translate3d(0,0,0)}to{transform:translate3d(-5%,3%,0)}}
-
+    /* Layout */
     .wrap{
-      width:min(920px, 92vw);
-      padding:22px;
+      position: relative;
+      height: 100%;
+      display: grid;
+      place-items: center;
+      padding: 24px;
     }
 
-    .card{
-      background: linear-gradient(180deg, rgba(255,255,255,.04), rgba(255,255,255,0)) , var(--panel);
-      border:1px solid rgba(159,179,216,.18);
-      box-shadow: 0 30px 120px rgba(0,0,0,.55);
-      border-radius:18px;
-      overflow:hidden;
-      position:relative;
+    /* Terminal card */
+    .term{
+      width: min(880px, 96vw);
+      border: 1px solid var(--border);
+      background: linear-gradient(180deg, var(--glass), var(--glass2));
+      border-radius: 18px;
+      box-shadow: 0 30px 90px rgba(0,0,0,0.55);
+      overflow: hidden;
     }
 
-    .topbar{
-      display:flex;
-      align-items:center;
-      justify-content:space-between;
-      padding:14px 16px;
-      border-bottom:1px solid rgba(159,179,216,.14);
-      font-family: ui-sans-serif, system-ui, -apple-system, Segoe UI, Roboto, Helvetica, Arial;
-      letter-spacing:.12em;
-      text-transform:uppercase;
-      font-size:12px;
-      color:rgba(215,221,231,.85);
+    .bar{
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      padding: 12px 14px;
+      border-bottom: 1px solid rgba(120, 220, 255, 0.14);
+      background: rgba(0,0,0,0.22);
     }
-    .topbar .left{
-      display:flex;
-      gap:10px;
-      align-items:center;
+    .dots{ display:flex; gap:8px; }
+    .dot{ width:10px; height:10px; border-radius: 50%; background: rgba(255,255,255,0.18); }
+    .title{
+      font-size: 12px;
+      color: var(--muted);
+      letter-spacing: 0.08em;
+      text-transform: uppercase;
+      user-select: none;
     }
-    .dots{
-      display:flex; gap:6px; opacity:.6
-    }
-    .dot{width:9px;height:9px;border-radius:50%;background:rgba(215,221,231,.32)}
-    .dot:nth-child(1){background:rgba(255,107,107,.45)}
-    .dot:nth-child(2){background:rgba(255,215,100,.35)}
-    .dot:nth-child(3){background:rgba(100,255,170,.25)}
-
-    .sig{
-      color:rgba(150,163,183,.85);
-      font-weight:500;
-    }
-
-    .terminal{
-      padding:18px 18px 16px;
-      display:grid;
-      gap:10px;
-    }
-
-    .meta{
-      display:flex;
-      gap:14px;
-      flex-wrap:wrap;
-      color:var(--muted);
-      font-size:12px;
-      opacity:.95;
-    }
-    .meta b{color:rgba(215,221,231,.95); font-weight:600}
 
     .screen{
-      background: rgba(0,0,0,.22);
-      border:1px solid rgba(159,179,216,.14);
-      border-radius:14px;
-      padding:14px 14px 12px;
-      position:relative;
-      overflow:hidden;
+      padding: 18px 18px 14px;
+      min-height: 360px;
+      line-height: 1.45;
+      font-size: 14px;
     }
 
-    /* faint grid inside screen */
-    .screen:before{
-      content:"";
-      position:absolute; inset:0;
-      background:
-        linear-gradient(rgba(255,255,255,.05) 1px, transparent 1px),
-        linear-gradient(90deg, rgba(255,255,255,.05) 1px, transparent 1px);
-      background-size: 28px 28px;
-      opacity:.06;
-      pointer-events:none;
+    .line{ white-space: pre-wrap; margin: 0 0 6px 0; }
+    .muted{ color: var(--muted); }
+    .accent{ color: var(--accent); }
+
+    .prompt{
+      display: inline-block;
+      color: rgba(120, 220, 255, 0.95);
+      margin-right: 8px;
     }
 
-    .log{
-      position:relative;
-      display:flex;
-      flex-direction:column;
-      gap:6px;
-      font-size:14px;
-      line-height:1.35;
-      padding-right:8px;
-      max-height:360px;
-      overflow:hidden;
-    }
-
-    .line{
-      white-space:pre-wrap;
-      color:rgba(215,221,231,.92);
-    }
-    .line.muted{color:rgba(150,163,183,.9)}
-    .line.warn{color:rgba(255,107,107,.9)}
-    .line.accent{color:rgba(159,179,216,.95)}
-
-    .statusrow{
-      display:flex;
-      align-items:center;
-      justify-content:space-between;
-      margin-top:10px;
-      gap:10px;
-      color:rgba(150,163,183,.95);
-      font-size:12px;
-    }
-    .bars{
-      display:flex; gap:3px; align-items:flex-end;
-    }
-    .bar{
-      width:4px; border-radius:2px;
-      background:rgba(159,179,216,.25);
-      height:6px;
-      transition:height .25s ease, background .25s ease;
-    }
-
+    /* Scrolling status strip */
     .ticker{
-      font-family: ui-sans-serif, system-ui, -apple-system, Segoe UI, Roboto, Helvetica, Arial;
-      letter-spacing:.08em;
-      text-transform:uppercase;
-      font-size:11px;
-      border-top:1px solid rgba(159,179,216,.14);
-      padding:10px 14px;
-      display:flex;
-      gap:12px;
-      color:rgba(215,221,231,.78);
-      background: rgba(0,0,0,.15);
-      position:relative;
-      overflow:hidden;
+      border-top: 1px solid rgba(120, 220, 255, 0.14);
+      background: rgba(0,0,0,0.18);
+      padding: 10px 0;
+      overflow: hidden;
     }
     .ticker span{
-      white-space:nowrap;
-      animation: crawl 10s linear infinite;
+      display: inline-block;
+      padding-left: 100%;
+      white-space: nowrap;
+      color: rgba(214, 255, 255, 0.68);
+      animation: scroll 14s linear infinite; /* <-- slow this (bigger = slower) */
+    }
+    @keyframes scroll {
+      0% { transform: translateX(0); }
+      100% { transform: translateX(-100%); }
+    }
+
+    /* Cursor */
+    .cursor{
       display:inline-block;
-      padding-left:100%;
+      width: 10px;
+      margin-left: 3px;
+      opacity: 0.9;
+      animation: blink 1.8s steps(2, start) infinite; /* <-- slower blink */
     }
-    @keyframes crawl{
-      from{transform:translateX(0)}
-      to{transform:translateX(-140%)}
-    }
-
-    .glitch{
-      animation: glitch .18s steps(2,end) 1;
-      text-shadow: 1px 0 rgba(159,179,216,.7), -1px 0 rgba(255,107,107,.55);
-    }
-    @keyframes glitch{
-      0%{transform:translate(0,0)}
-      33%{transform:translate(1px,-1px)}
-      66%{transform:translate(-1px,1px)}
-      100%{transform:translate(0,0)}
-    }
-
-    .footer{
-      margin-top:12px;
-      color:rgba(150,163,183,.85);
-      font-size:12px;
-      display:flex;
-      justify-content:space-between;
-      gap:10px;
-      opacity:.95;
-    }
+    @keyframes blink { to { opacity: 0; } }
   </style>
 </head>
+
 <body>
+  <div class="veil"></div>
+  <div class="fx"></div>
+
   <div class="wrap">
-    <div class="card">
-      <div class="topbar">
-        <div class="left">
-          <div class="dots"><div class="dot"></div><div class="dot"></div><div class="dot"></div></div>
-          <div><strong>BISAN EXCHANGE</strong> / MARKET NODE</div>
+    <div class="term" role="region" aria-label="Bisan Exchange Terminal">
+      <div class="bar">
+        <div class="dots">
+          <div class="dot"></div><div class="dot"></div><div class="dot"></div>
         </div>
-        <div class="sig">ELITE SKYWAY RELAY · ACTIVE</div>
+        <div class="title">Bisan Exchange — backchannel</div>
+        <div class="title muted">node: market-relay</div>
       </div>
 
-      <div class="terminal">
-        <div class="meta">
-          <div><b>NODE</b> MX-LB/DOWNTOWN</div>
-          <div><b>CHANNEL</b> INVENTORY</div>
-          <div><b>SEC</b> COMPLIANCE-LAYER ON</div>
-          <div><b>TIME</b> <span id="clock"></span></div>
-        </div>
-
-        <div class="screen">
-          <div class="log" id="log"></div>
-
-          <div class="statusrow">
-            <div id="status">STATUS: INITIALIZING…</div>
-            <div class="bars" aria-hidden="true">
-              <div class="bar" id="b1"></div>
-              <div class="bar" id="b2"></div>
-              <div class="bar" id="b3"></div>
-              <div class="bar" id="b4"></div>
-              <div class="bar" id="b5"></div>
-            </div>
-          </div>
-        </div>
-      </div>
+      <div class="screen" id="screen" aria-live="polite"></div>
 
       <div class="ticker">
-        <span id="crawl">TEMPORARY DISCONNECT · ERROR: NX-7C11 · RETRYING HANDSHAKE · MARKET NODE UNRESPONSIVE</span>
+        <span id="tickerText">
+          TEMPORARY DISCONNECT // ERROR: NX-41A7 // RELAY HANDSHAKE FAILED // RETRY WINDOW: 00:13 // DO NOT REFRESH //
+        </span>
       </div>
-    </div>
-
-    <div class="footer">
-      <div>© BISAN EXCHANGE · UNLISTED ROUTE</div>
-      <div>IF YOU ARE SEEING THIS PAGE: CONNECTION FAILED.</div>
     </div>
   </div>
 
-<script>
-  const log = document.getElementById("log");
-  const statusEl = document.getElementById("status");
-  const crawl = document.getElementById("crawl");
-  const bars = [b1,b2,b3,b4,b5];
+  <script>
+    /**
+     * BACKDOOR / FUTURE-TECH TERMINAL
+     * - slower typing
+     * - small pauses for menace
+     * - optional “glitch” flicker
+     */
 
-  const codes = ["NX-7C11","LB-0A9F","SKY-13DE","ITE-44B2","MX-9D07","CRC-2F18","CEN-0D33","NX-5A1C"];
-  const lines = [
-    ["accent", "PING market node…"],
-    ["muted",  "routing via ELITE SKYWAY relay"],
-    ["muted",  "compliance-layer: handshake required"],
-    ["accent", "HANDSHAKE → INIT"],
-    ["warn",   "SYNC FAIL (packet loss)"],
-    ["muted",  "retrying…"],
-    ["accent", "HANDSHAKE → INIT"],
-    ["warn",   "TEMPORARY DISCONNECT"],
-    ["muted",  "error reported to municipal layer (auto)"],
-  ];
+    const screen = document.getElementById("screen");
 
-  function addLine(kind, text){
-    const d = document.createElement("div");
-    d.className = `line ${kind}`;
-    d.textContent = text;
-    log.appendChild(d);
-    // keep it from growing forever
-    if(log.children.length > 14) log.removeChild(log.firstChild);
-  }
+    // --- SPEED CONTROLS (these are the lines you’ll tweak) ---
+    const TYPE_MS = 80;          // typing speed (60–95 feels right)
+    const LINE_PAUSE_MS = 550;   // pause between lines
+    const BLOCK_PAUSE_MS = 1200; // pause between “sections”
+    // --------------------------------------------------------
 
-  function now(){
-    const dt = new Date();
-    const pad = n => String(n).padStart(2,"0");
-    return `${pad(dt.getHours())}:${pad(dt.getMinutes())}:${pad(dt.getSeconds())}`;
-  }
+    const lines = [
+      { text: "[INIT] market-relay :: tunnel request queued", cls: "muted" },
+      { text: "[AUTH] keyring: BISAN//EXCHANGE//LOCAL", cls: "muted" },
+      { text: "[HANDSHAKE] establishing...", cls: "muted" },
 
-  function setClock(){
-    document.getElementById("clock").textContent = now();
-  }
-  setInterval(setClock, 250);
-  setClock();
+      { pause: BLOCK_PAUSE_MS },
 
-  // staged boot sequence
-  let i = 0;
-  function boot(){
-    const [k, t] = lines[i % lines.length];
-    addLine(k, `[${now()}] ${t}`);
-    i++;
+      { text: "> ACCESS REQUEST: BISAN_EXCHANGE/market", cls: "" },
+      { text: "[TRACE] spoof route: cad-net → basin-node → easton relay", cls: "muted" },
+      { text: "[OK] cam lattice: cloaked", cls: "muted" },
+      { text: "[OK] inventory mirror: cached", cls: "muted" },
 
-    // status text
-    const phase = i % 9;
-    if(phase < 3) statusEl.textContent = "STATUS: LINKING…";
-    else if(phase < 6) statusEl.textContent = "STATUS: HANDSHAKE FAIL";
-    else statusEl.textContent = "STATUS: TEMPORARY DISCONNECT";
+      { pause: BLOCK_PAUSE_MS },
 
-    // bars “signal”
-    const strength = Math.max(0, 5 - (phase >= 6 ? 4 : (phase >= 3 ? 2 : 1)));
-    bars.forEach((b, idx) => {
-      const on = idx < strength;
-      const h = on ? (8 + idx*4) : (4 + Math.random()*3);
-      b.style.height = `${h}px`;
-      b.style.background = on ? "rgba(159,179,216,.55)" : "rgba(159,179,216,.18)";
-    });
+      { text: "[WARN] market relay experiencing temporary disconnect", cls: "accent" },
+      { text: "ERROR: NX-41A7 // handshake drift beyond tolerance", cls: "accent" },
+      { text: "suggested action: hold position • do not refresh • await window", cls: "muted" },
 
-    // rotate error codes + occasional glitch
-    if(phase === 8 || phase === 4){
-      const code = codes[Math.floor(Math.random()*codes.length)];
-      crawl.textContent = `TEMPORARY DISCONNECT · ERROR: ${code} · RETRYING HANDSHAKE · MARKET NODE UNRESPONSIVE`;
-      crawl.classList.add("glitch");
-      setTimeout(()=>crawl.classList.remove("glitch"), 180);
+      { pause: BLOCK_PAUSE_MS },
+
+      { text: "> REQUEST STATUS", cls: "" },
+      { text: "[RESPONSE] pending…", cls: "muted" },
+    ];
+
+    function addLineContainer(cls=""){
+      const p = document.createElement("p");
+      p.className = "line " + cls;
+      screen.appendChild(p);
+      return p;
     }
-  }
 
-  // start
-  addLine("muted", `[${now()}] request received`);
-  addLine("muted", `[${now()}] verifying route token…`);
-  setTimeout(()=>addLine("accent", `[${now()}] token accepted`), 450);
+    function sleep(ms){ return new Promise(r => setTimeout(r, ms)); }
 
-  setInterval(boot, 700);
-</script>
+    async function typeText(el, text){
+      // Slight variance so it feels human / machine-ish
+      for (let i = 0; i < text.length; i++){
+        el.textContent += text[i];
+        const jitter = Math.random() < 0.06 ? (TYPE_MS * 3) : 0;
+        await sleep(TYPE_MS + jitter);
+      }
+    }
+
+    async function run(){
+      screen.innerHTML = "";
+      // boot line w/ cursor
+      const boot = addLineContainer("muted");
+      boot.innerHTML = `<span class="prompt">└</span> session open<span class="cursor">▌</span>`;
+      await sleep(420);
+      boot.innerHTML = `<span class="prompt">└</span> session open`;
+
+      for (const item of lines){
+        if (item.pause){
+          await sleep(item.pause);
+          continue;
+        }
+        const el = addLineContainer(item.cls || "");
+        await typeText(el, item.text);
+        await sleep(LINE_PAUSE_MS);
+        // keep view pinned to bottom
+        screen.scrollTop = screen.scrollHeight;
+      }
+
+      // idle cursor at end
+      const end = addLineContainer("");
+      end.innerHTML = `<span class="prompt">></span><span class="cursor">▌</span>`;
+    }
+
+    run();
+
+    // OPTIONAL: subtle glitch pulse (very light)
+    // If you want more glitch, increase opacity changes or shorten interval.
+    setInterval(() => {
+      const fx = document.querySelector(".fx");
+      fx.style.opacity = (Math.random() * 0.08 + 0.14).toFixed(2);
+    }, 900);
+  </script>
 </body>
 </html>
