--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
   <style>
     :root{
-      --bg: url("assets/bg.jpg");
+      --bg: url("assets/bg.png");
       --ink: rgba(214, 255, 255, 0.92);
       --muted: rgba(214, 255, 255, 0.55);
       --glass: rgba(6, 18, 28, 0.58);
